--- a/app/src/main/res/layout/activity_keyframe.xml
+++ b/app/src/main/res/layout/activity_keyframe.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_stitching"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="anim.eye.cool.anim.MainActivity">
+    tools:context="anim.eye.cool.anim.keyframe.KeyframeActivity">
+
 
     <Button
+        android:id="@+id/btn_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="goBezier"
-        android:text="贝塞尔曲线"/>
+        android:background="@drawable/p5"/>
 
-    <Button
+    <ImageView
+        android:id="@+id/iv_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="goKeyframe"
-        android:text="关键帧动画"/>
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/p1"/>
+</RelativeLayout>
