--- a/app/src/main/res/layout/activity_bezier.xml
+++ b/app/src/main/res/layout/activity_bezier.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
-
-    <anim.eye.cool.anim.bezier.BezierLayout
-        android:id="@+id/bezier_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/layout_controller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -44,4 +40,19 @@
             android:onClick="speedDown"
             android:text="减速"/>
     </LinearLayout>
-</LinearLayout>
+
+
+    <anim.eye.cool.anim.bezier.BezierLayout
+        android:id="@+id/bezier_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/layout_controller"/>
+
+    <TextView
+        android:id="@+id/tv_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/layout_controller"
+        android:layout_alignParentRight="true"
+        android:layout_margin="12dp"/>
+</RelativeLayout>
